# ignis-config

./: main.py  pyproject.toml
assets/: style.scss
scripts/: launch.fish
widgets/: bar.py  bar_center.py  bar_left.py  bar_right.py  niri_workspaces.py  resources.py  screenrec.py
